--- a/nest-first-api/package.json
+++ b/nest-first-api/package.json
@@ -31,10 +31,12 @@
     "@nestjs/swagger": "^5.1.4",
     "@types/bcrypt": "^5.0.0",
     "@types/lodash": "^4.14.176",
+    "@types/mailgun-js": "^0.22.12",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "lodash": "^4.17.21",
+    "mailgun-js": "^0.22.0",
     "moment": "^2.29.1",
     "mongoose": "^6.0.12",
     "passport": "^0.5.0",
