--- a/nest-product-card-api/package.json
+++ b/nest-product-card-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nest-first-api",
+  "name": "nest-product-card-api",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -24,29 +24,12 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.0",
     "@nestjs/core": "^8.0.0",
-    "@nestjs/jwt": "^8.0.0",
     "@nestjs/mongoose": "^9.0.1",
-    "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/swagger": "^5.1.4",
-    "@typegoose/typegoose": "github:typegoose/typegoose",
-    "@types/bcrypt": "^5.0.0",
-    "@types/lodash": "^4.14.176",
-    "@types/mailgun-js": "^0.22.12",
-    "bcrypt": "^5.0.1",
-    "class-transformer": "^0.4.0",
-    "class-validator": "^0.13.1",
-    "lodash": "^4.17.21",
-    "mailgun-js": "^0.22.0",
-    "moment": "^2.29.1",
     "mongoose": "^6.0.12",
-    "nestjs-typegoose": "^7.1.38",
-    "passport": "^0.5.0",
-    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "swagger-ui-express": "^4.1.6"
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
