--- a/nest-product-card-api/package.json
+++ b/nest-product-card-api/package.json
@@ -26,14 +26,18 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/mongoose": "^9.0.1",
+    "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/passport-jwt": "^3.0.6",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "i": "^0.3.7",
     "mongoose": "^6.0.12",
     "npm": "^8.1.3",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
