--- a/nest-product-card-api/docker-compose.yml
+++ b/nest-product-card-api/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   mongo:
     image: mongo:4
     container_name: mongo_yud
+    restart: unless-stopped
     environment:
       - MONGO_INITDB_ROOT_USERNAME=admin
       - MONGO_INITDB_ROOT_PASSWORD=123456
@@ -11,3 +12,20 @@ services:
     volumes:
       - ./mongo-data:/data/db
     command: --wiredTigerCacheSizeGB 1.5
+
+  top.api:
+    
+    build: 
+      context: ./
+      dockerfile: ./Dockerfile
+    container_name: top-api-yud
+    restart: unless-stopped
+    env_file:
+      - '.env'
+    ports:
+      - '3000:3000'
+    # volumes:
+    #   - './.env:/opt/api/.env'
+    
+
+  
