--- a/nest-product-card-api/.env
+++ b/nest-product-card-api/.env
@@ -1,6 +1,6 @@
 MONGO_LOGIN=admin
 MONGO_PASSWORD=123456
-MONGO_HOST=192.168.1.35
+MONGO_HOST=localhost
 MONGO_PORT=27017
 MONGO_DB_NAME=admin
 JWT_SECRET=test
