--- a/nest-product-card-api/package.json
+++ b/nest-product-card-api/package.json
@@ -28,11 +28,19 @@
     "@nestjs/mongoose": "^9.0.1",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/serve-static": "^2.2.2",
+    "@types/app-root-path": "^1.2.4",
     "@types/bcryptjs": "^2.4.2",
+    "@types/fs-extra": "^9.0.13",
+    "@types/multer": "^1.4.7",
     "@types/passport-jwt": "^3.0.6",
+    "@types/sharp": "^0.29.4",
+    "app-root-path": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "date-fns": "^2.26.0",
+    "fs-extra": "^10.0.0",
     "i": "^0.3.7",
     "mongoose": "^6.0.12",
     "npm": "^8.1.3",
@@ -40,7 +48,8 @@
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "sharp": "^0.29.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
