--- a/nest-product-card-api/package.json
+++ b/nest-product-card-api/package.json
@@ -35,6 +35,7 @@
     "@types/multer": "^1.4.7",
     "@types/passport-jwt": "^3.0.6",
     "@types/sharp": "^0.29.4",
+    "@types/xml2js": "^0.4.9",
     "app-root-path": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
@@ -49,7 +50,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "sharp": "^0.29.3"
+    "sharp": "^0.29.3",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
