#product-api telegram bot

--- a/nest-product-card-api/.env
+++ b/nest-product-card-api/.env
@@ -5,3 +5,5 @@ MONGO_PORT=27017
 MONGO_DB_NAME=admin
 JWT_SECRET=test
 DOMAIN=https://test.ua
+TELEGRAM_TOKEN=2120802111:AAH61jwxE7q_J4eNSgbH9euhVEUiUsCTjCo
+CHAT_ID=-620531831
