--- a/nest-product-card-api/package.json
+++ b/nest-product-card-api/package.json
@@ -51,6 +51,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "sharp": "^0.29.3",
+    "telegraf": "^4.4.2",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
