--- a/nest-product-card-api/package.json
+++ b/nest-product-card-api/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "0.0.3",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.0",
     "@nestjs/core": "^8.0.0",
@@ -44,6 +45,7 @@
     "fs-extra": "^10.0.0",
     "i": "^0.3.7",
     "mongoose": "^6.0.12",
+    "nest-schedule": "^0.6.4",
     "npm": "^8.1.3",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
@@ -58,6 +60,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/mongoose": "^5.11.97",
